--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -33,5 +36,6 @@
     "overrides": {
       "vite": "npm:rolldown-vite@7.2.5"
     }
-  }
+  },
+  "homepage": "https://obaidiDev.github.io/Mathemantery"
 }
